--- a/template.html
+++ b/template.html
@@ -35,83 +35,93 @@
 	<script>
 		
 		(function() {
-			var left = [
-			[-16.13652871,	0],
-			[-5.404453192, -20.73487842],
-			[-6.043676384,	-28.5461968],
-			[-27.15236485,	-18.16309691],
-			[-18.9112377,	-13.15819586],
-			[-14.9007684,	-10.72260645],
-			[-11.14663092,	-13.56838952],
-			[-15.16549812,	-16.05562718],
-			[10.8442201,	29.60093331],
-			[15.98948028,	32.42363822],
-			[21.6142725,	29.1236702],
-			[16.46426158,	26.21810481],
-			[-14.63176041,	32.79534009],
-			[-22.70834528,	28.67542423],
-			[-11.26266683,	21.09479639],
-			[-3.136731628,	25.48622314],
-			[-4.483718759,	8.162218178],
-			[-12.24767194,	3.670802209],
-			[-0.6583254014,	-4.586572082],
-			[7.141690631,	0.1958160479],
-			[11.31196214,	37.05208659],
-			[2.748976324,	32.50106108],
-			[21.48580363,	21.12443976],
-			[30.07484456,	26.13635178],
-			[21.16320291,	-27.25026057],
-			[5.891567208,	-37.95545539],
-			[6.855887691,	-30.12268065],
-			[14.80734798,	-24.68286656],
-			[-23.33589772,	3.388123497],
-			[-39.22872432,	-5.591506818],
-			[-39.06413041,	-13.33633159],
-			[-35.70961181,	-16.08978759],
-			[-35.79693575,	-8.330017215],
-			[-44.19342514,	-13.15819586],
-			[-43.90807228,	-20.941173],
-			[-22.40426898,	-39.34990866],
-			[-22.15889178,	-31.51523671]]
+			var left = {
+				a	:[	-16.13652871	,0	],
+				aa	:[	-5.404453192	,-20.73487842	],
+				ab	:[	-6.043676384	,-28.5461968	],
+				ac	:[	-27.15236485	,-18.16309691	],
+				ad	:[	-18.9112377	    ,-13.15819586	],
+				ae	:[	-14.9007684		,-10.72260645	],
+				af	:[	-11.14663092	,-13.56838952	],
+				ag	:[	-15.16549812	,-16.05562718	],
+				ah	:[	10.8442201		,29.60093331	],
+				ai	:[	15.98948028		,32.42363822	],
+				aj	:[	21.6142725		,29.1236702	],
+				ak	:[	16.46426158		,26.21810481	],
+				b	:[	-14.63176041	,32.79534009	],
+				c	:[	-22.70834528	,28.67542423	],
+				d	:[	-11.26266683	,21.09479639	],
+				e	:[	-3.136731628	,25.48622314	],
+				f	:[	-4.483718759	,8.162218178	],
+				g	:[	-12.24767194	,3.670802209	],
+				h	:[	-0.6583254014	,-4.586572082	],
+				i	:[	7.141690631		,0.1958160479	],
+				j	:[	11.31196214		,37.05208659	],
+				k	:[	2.748976324		,32.50106108	],
+				l	:[	21.48580363		,21.12443976	],
+				m	:[	30.07484456		,26.13635178	],
+				n	:[	21.16320291		,-27.25026057	],
+				o	:[	5.891567208		,-37.95545539	],
+				p	:[	6.855887691		,-30.12268065	],
+				q	:[	14.80734798		,-24.68286656	],
+				r	:[	-23.33589772	,3.388123497	],
+				s	:[	-39.22872432	,-5.591506818	],
+				t	:[	-39.06413041	,-13.33633159	],
+				u	:[	-35.70961181	,-16.08978759	],
+				v	:[	-35.79693575	,-8.330017215	],
+				w	:[	-44.19342514	,-13.15819586	],
+				x	:[	-43.90807228	,-20.941173	],
+				y	:[	-22.40426898	,-39.34990866	],
+				z	:[	-22.15889178	,-31.51523671	]
+			}
 
-			var right = [		
-			[16.13652871,	0	],
-			[22.52242543,	-20.73487842],
-			[22.75021866,	-28.5461968	],
-			[1.104603483,	-18.16309691],
-			[9.988112723,	-13.15819586],
-			[14.31119141,	-10.72260645],
-			[17.7000709,	-13.56838952],
-			[13.36196524,	-16.05562718],
-			[34.52644769,	29.60093331	],
-			[40.16497823,	32.42363822	],
-			[45.21309791,	29.1236702	],
-			[39.55533669,	26.21810481	],
-			[14.63176041,	32.79534009	],
-			[5.926173196,	28.67542423	],
-			[16.21449001,	21.09479639	],
-			[25.01088008,	25.48622314	],
-			[25.33704739,	8.162218178	],
-			[16.96428787,	3.670802209	],
-			[27.43435668,	-4.586572082],
-			[35.88262,	    0.1958160479],
-			[36.29628582,	37.05208659	],
-			[26.93800399,	32.50106108	],
-			[43.68675595,	21.12443976	],
-			[53.15163324,	26.13635178	],
-			[50.11504448,	-27.25026057],
-			[33.53867766,	-37.95545539],
-			[33.5778362,	-30.12268065],
-			[42.22749992,	-24.68286656],
-			[7.68718284,	3.388123497	],
-			[-9.358184761,  -5.591506818],
-			[-8.416482621,  -13.33633159],
-			[-5.397550599,  -16.08978759],
-			[-6.277885662,  -8.330017215],
-			[-15.29407472,  -13.15819586],
-			[-14.18728975,  -20.941173],
-			[5.072887852,	-39.34990866],
-			[4.384321305,	-31.51523671]]
+			var right = {	
+				a: [16.13652871,	0	],
+				aa: [22.52242543,	-20.73487842],
+				ab: [22.75021866,	-28.5461968	],
+				ac: [1.104603483,	-18.16309691],
+				ad:	[9.988112723,	-13.15819586],
+				ae: [14.31119141,	-10.72260645],
+				af: [17.7000709,	-13.56838952],
+				ag: [13.36196524,	-16.05562718],
+				ah: [34.52644769,	29.60093331	],
+				ai: [40.16497823,	32.42363822	],
+				aj: [45.21309791,	29.1236702	],
+				ak: [39.55533669,	26.21810481	],
+				b: [14.63176041,	32.79534009	],
+				c: [5.926173196,	28.67542423	],
+				d: [16.21449001,	21.09479639	],
+				e: [25.01088008,	25.48622314	],
+				f: [25.33704739,	8.162218178	],
+				g: [16.96428787,	3.670802209	],
+				h: [27.43435668,	-4.586572082],
+				i: [35.88262,	    0.1958160479],
+				j: [36.29628582,	37.05208659	],
+				k: [26.93800399,	32.50106108	],
+				l: [43.68675595,	21.12443976	],
+				m: [53.15163324,	26.13635178	],
+				n: [50.11504448,	-27.25026057],
+				o: [33.53867766,	-37.95545539],
+				p: [33.5778362,	-30.12268065],
+				q: [42.22749992,	-24.68286656],
+				r: [7.68718284,	3.388123497	],
+				s: [-9.358184761,  -5.591506818],
+				t: [-8.416482621,  -13.33633159],
+				u: [-5.397550599,  -16.08978759],
+				v: [-6.277885662,  -8.330017215],
+				w: [-15.29407472,  -13.15819586],
+				x: [-14.18728975,  -20.941173],
+				y: [5.072887852,	-39.34990866],
+				z: [4.384321305,	-31.51523671]
+			}
+
+			var first = ['s', 'v', 'w', 'z', 'y', 'z', 'aa', 'ab', 'aa', 'p',
+						 'q', 'l', 'k', 'j', 'm', 'l', 'm',
+						 'n', 'o', 'ab', 'y', 'x', 'w', 'x', 'u', 't', 's',
+						 'r', 'c', 'b', 'e', 'd', 'c', 'd', 'g', 'h', 'k', 'h', 'g', 'f', 'e']
+			var topsquare = ['ah', 'ai', 'ak', 'aj', 'ai', 'ah', 'ak', 'aj', 'ak']			
+			var bottomsquare = ['ac', 'ad', 'ae', 'af', 'ag', 'ad']			
+
 			var canvas,
 			  	context,
 				centerX,
@@ -123,44 +133,53 @@
 			function pixelToMM(px) {   
 				return Math.floor(px/$('#my_mm').height()); //JQuery returns sizes in PX
 			}
+			/**
+			 * Convert mm to pixels. 
+			 */
 			function mmToPixel(mm) {
-				//TODO
+				// mm * pixel/mm
+				let pixelHeight = $('#my_px').height();
+				let mmHeight = $('#my_mm').height();
+				return Math.floor(mm * (pixelHeight/mmHeight));
 			}
 
 			function initialize() {
 				canvas = document.getElementById('c')
 				context = canvas.getContext('2d')
+				canvas.width = $('body').width();
+				canvas.height= $('body').height();
 				centerX = canvas.width/2
 				centerY = canvas.height/2
 				context.fillStyle = "black";
 				context.fillRect(0, 0, canvas.width, canvas.height);
 			}
+
+			function drawTo(order, points) {
+				context.moveTo(points[order[0]][0], points[order[0]][1]); //start				
+				context.beginPath()
+				for(let i=1; i<order.length; i++) {
+					let nextPoint = points[order[i]]; 
+					let pointX = nextPoint[0]
+					let pointY = nextPoint[1]
+					context.lineTo(mmToPixel(pointX) + centerX, (mmToPixel(-pointY) + centerY)) //hackery
+				}
+				context.stroke()
+				context.closePath()
+	
+			}
 						
 			function draw() {
-				//left 
-				context.strokeStyle = '#FF0000'
-				context.beginPath()
-				context.moveTo(centerX, centerY)
-				for(let point of left) {
-					let u = point[0]
-					let v = point[1]
-					//origin is centerX, centerY
-					context.lineTo(u+centerX, v+centerY)
-				}
-				context.stroke()
-				context.closePath()
+				//left 				
+				context.strokeStyle = '#FF0000'				
+				drawTo(first, left);
+				drawTo(topsquare, left);
+				drawTo(bottomsquare , left);
+				
 				//left
 				context.strokeStyle = 'blue'
-				context.beginPath()
-				context.moveTo(centerX, centerY)
-				for(let point of right) {
-					let u = point[0]
-					let v = point[1]
-					//origin is centerX, centerY
-					context.lineTo(u+centerX, v+centerY)
-				}
-				context.stroke()
-				context.closePath()
+				drawTo(first, right);
+				drawTo(topsquare, right);
+				drawTo(bottomsquare , right);
 			}
 		
 		})();
